--- a/views/user/reviewOpen.ejs
+++ b/views/user/reviewOpen.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="container mainFlex mb-5 mt-5">
+<div class="container mainFlex mb-5 mt-2">
     <div class="container p-3 mainCont">
       <h3 class="text-center" style="font-family: 'Michroma', sans-serif;">Reviews</h3>
     <div class="product-card reviewCard mx-auto" reviewId="<%=id%>">
@@ -59,10 +59,10 @@
                 <span>Type here..!</span>
                 <i></i>
             </div>
-              <input type="hidden" class="form-control" id="id" value="">
+              <input type="hidden"  id="id" value="">
             </div>
             <div class="col-auto ">
-            <button type="submit" class="btn btn-warning mt-2" style="height: 45px;"><i class="fa-regular fa-paper-plane"></i>
+            <button type="submit"class="btn btn-warning mt-2" style="height: 45px;"><i class="fa-regular fa-paper-plane"></i>
             </button>
             </div>
         </form>
