--- a/public/css/chatBot.css
+++ b/public/css/chatBot.css
@@ -125,8 +125,8 @@ margin: 0;
   .inputbox input {
     position: relative;
     width: 100%;
-    min-width: 160px;
-    max-width: 700px; 
+    min-width: 100px !important;
+    max-width: 300px !important; 
     padding: 20px 10px 10px;
     background: transparent;
     outline: none;
@@ -178,6 +178,7 @@ margin: 0;
 
   #messageInput{
     color: white !important;
+    max-width: 150px !important;
   }
 
   .messageCont::-webkit-scrollbar{
