--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -116,8 +116,10 @@
             <% }); %>
         <% } else { %>
             <div class="col">
-                <p class="text-center display-6 mainFontFamily"><u>No products.</u></p>
-                <a href="/user/allProducts" class="mt-3" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn border border-black  btn-warning  rounded py-3 px-3 mainFontFamily">Continue Shopping</span></a>
+                <p class="text-center fs-5 mainFontFamily">No products.</p>
+                <a href="/user/allProducts" class="mt-3 fs-6" style="display: flex; justify-content: center; text-decoration: none; color: black !important;">
+                    <span class="ms-2 rounded py-3 px-3 mainFontFamily">Continue Shopping <i class="ms-2 bi bi-arrow-right"></i></span>
+                </a>
             </div>
         <% } %>
     </div>
