--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -5,9 +5,9 @@
 </head>
 <body>
     <%- include('../layout/header')-%>
-    <div class="container d-flex" style="justify-content: space-between; align-items: center;">
-        <h2 class="text mb-4" style="margin-top: 20px;  font-family: 'Michroma', sans-serif;"><u>Wishlist!</u></h2>
-        <a href="/user/cart/" class="btn btn-dark rounded"><h4 style="margin-top: 5px;  font-family: 'Michroma', sans-serif;">Go To Cart</h4></a>
+    <div class="container d-flex" style="justify-content: start; align-items: center;">
+        <h3 class="text mb-3 mt-3" style="  font-family: 'Michroma', sans-serif;"><u>Wishlist!</u></h3>
+        <!-- <a href="/user/cart/" class="btn btn-dark rounded"><h4 style="margin-top: 5px;  font-family: 'Michroma', sans-serif;">Go To Cart</h4></a> -->
     </div>
     <div class="container productCont " style="margin-top: 0px; background-color: white; border: none;">
                 <% if (locals?.products) { %>
@@ -57,9 +57,9 @@
                                     <div class="btn-group d-flex mb-1" style="justify-content: space-around;" role="group" aria-label="Sizes">
                                         <% if (product?.sizes && product?.sizes.length > 0 && product?.quantity>0) { %>
                                             <% product.sizes.forEach((size) => { %>
-                                                <div class="btn btn-dark size-button rounded" data-size="<%= size %>" data-product-id="<%= product._id %>"><%= size %></div>
+                                                <div class="btn btn-dark size-button rounded-pill" data-size="<%= size %>" data-product-id="<%= product._id %>"><%= size %></div>
                                             <% }) %>
-                                            <button class="btn btn-dark rounded clearSizesButton" data-product-id="<%= product._id %>">Clear</button>
+                                            <button class="btn btn-dark rounded-pill clearSizesButton" data-product-id="<%= product._id %>">Clear</button>
                                         <% } else { %>
                                             <p class="text-danger btn rounded btn-dark pb-2" style="font-family: 'Michroma', sans-serif; font-size: 20px;">
                                                 <span class="fs-4">Out Of Stock!! </span>
@@ -71,7 +71,7 @@
                                         <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;" ><span class="fs-5"><b>Brand :</b> </span><%=product?.brand%></p>
                                     </div>
                                     <% if (product?.deleted===false && product?.sizes.length>0 && product?.quantity>0) { %>
-                                        <a  id="<%=product._id%>" class="addToCart btn btn-dark d-flex justify-content-center pt-1 pb-1 mb-2" ><h3 style=" font-family: 'Michroma', sans-serif;">Add To Cart</h3></a>
+                                        <a  id="<%=product._id%>" class="addToCart btn btn-dark d-flex justify-content-center pt-1 pb-1 mb-2 rounded-pill " ><h3 style=" font-family: 'Michroma', sans-serif;">Add To Cart</h3></a>
                                     <% } else { %>
                                         <a class="text-danger btn btn-dark d-flex justify-content-center pt-1 pb-1 mb-2" ><h3 style=" font-family: 'Michroma', sans-serif;">Not Available!</h3></a>
                                     <% } %>
